--- a/play-react/frontend/package.json
+++ b/play-react/frontend/package.json
@@ -12,6 +12,7 @@
     "@types/react": "^16.0.20",
     "@types/react-dom": "^16.0.2",
     "css-loader": "^0.28.7",
+    "extract-text-webpack-plugin": "^3.0.2",
     "style-loader": "^0.19.0",
     "ts-loader": "^3.1.1",
     "typescript": "^2.6.1",
