--- a/play-react/frontend/package.json
+++ b/play-react/frontend/package.json
@@ -11,6 +11,7 @@
   "devDependencies": {
     "@types/react": "^16.0.20",
     "@types/react-dom": "^16.0.2",
+    "@types/react-redux": "^5.0.12",
     "css-loader": "^0.28.7",
     "extract-text-webpack-plugin": "^3.0.2",
     "style-loader": "^0.19.0",
@@ -20,6 +21,8 @@
   },
   "dependencies": {
     "react": "^16.0.0",
-    "react-dom": "^16.0.0"
+    "react-dom": "^16.0.0",
+    "react-redux": "^5.0.6",
+    "redux": "^3.7.2"
   }
 }
