--- a/play-react/frontend/tsconfig.json
+++ b/play-react/frontend/tsconfig.json
@@ -4,6 +4,7 @@
     "noUnusedLocals": true,
     "noImplicitThis": true,
     "alwaysStrict": true,
+    "moduleResolution": "node",
     "outDir": "../public/",
     "sourceMap": true,
     "noImplicitAny": true,
