--- a/play-react/frontend/package.json
+++ b/play-react/frontend/package.json
@@ -14,6 +14,7 @@
     "@types/react-redux": "^5.0.12",
     "css-loader": "^0.28.7",
     "extract-text-webpack-plugin": "^3.0.2",
+    "file-loader": "^1.1.5",
     "style-loader": "^0.19.0",
     "ts-loader": "^3.1.1",
     "typescript": "^2.6.1",
