--- a/play-react/frontend/package.json
+++ b/play-react/frontend/package.json
@@ -21,6 +21,9 @@
     "webpack": "^3.8.1"
   },
   "dependencies": {
+    "@types/material-ui": "^0.18.4",
+    "material-ui": "^0.19.4",
+    "material-ui-icons": "^1.0.0-beta.17",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
     "react-redux": "^5.0.6",
